<resources>
    <string name="app_name">AttenTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="startup_hello">Hello There.</string>
    <string name="startup_welcome">Welcome to AttenTrack.</string>
    <string name="startup_lets_get">Let\'s Get You Started!</string>
    <string name="startup_session_title">What Are Your Class Timings?</string>
    <string name="startup_guide_text">Click to add. Swipe to delete.</string>
    <string name="session_time_start">Start</string>
    <string name="session_time_end">End</string>
    <string name="startup_subject_title">And Your Courses?</string>
    <string name="condensed_subject_title">What Are Your Courses?</string>
    <string name="startup_timetable_title">What\'s 12 x 12?\nNo wait, that\'s the times table!\nEnter Your Time Table.</string>
    <string name="monday_text">Monday</string>
    <string name="tuesday_text">Tuesday</string>
    <string name="wednesday_text">Wednesday</string>
    <string name="thursday_text">Thursday</string>
    <string name="friday_text">Friday</string>
    <string name="saturday_text">Saturday</string>
    <string name="sunday_text">Sunday</string>
    <string name="required_attendance">Required Attendance (%):</string>
    <string name="semester_text">One Last Thing;\nSemester Start and End Date</string>
    <string name="blank_date">--/--/----</string>
    <string name="empty_hyphen">-</string>
    <string name="session_distr_title">Total Sessions</string>
    <string name="startup_loading_text">Setting Up Your Schedule.</string>
    <string name="dialog_date_text">Date:</string>
    <string name="dialog_session_text">Session:</string>
    <string name="dialog_subject_text">Subject:</string>
    <string name="class_override_warning">WARNING: A class already exists in that time slot.
        Press Add again to overwrite class.</string>
    <string name="hi_there">Hi There,</string>
    <string name="todays_classes_text">Today\'s Classes</string>
    <string name="cancel_all_warning">Would you like to cancel all of today\'s classes?</string>
    <string name="time_table_title">Time Table</string>
    <string name="time_table_edit">Time Table Editor</string>
    <string name="time_table_change_warning">The total class count of the following subjects have changed :-\n\n</string>
    <string name="schedule_menu">Schedule</string>
    <string name="edit_stats_menu">Edit Stats</string>
    <string name="start_new_sem_menu">Start New Semester</string>
    <string name="reset_menu">Reset Details</string>
    <string name="toggle_menu">Toggle Dark Mode</string>
    <string name="support_menu">Support</string>
    <string name="notif_on_menu">Disable Notifications</string>
    <string name="notif_off_menu">Enable Notifications</string>
    <string name="reset_mode_text">Welcome to Reset Mode</string>
    <string name="support_message">
        You might have noticed that there are no in-line ads in this app and there never will be.
        However, I\'ll be beyond grateful if you could consider supporting me by watching a quick ad
        or leaving a review by clicking either of the buttons below.\n
        Thank you for using AttenTrack.\n
        ( ^ ᗜ ^ )
    </string>
    <string name="warning_title">WARNING</string>
    <string name="reset_warning">This will permanently erase all the data.</string>
    <string name="new_sem_warning">This will reset the subjects and time table data.</string>
    <string name="edit_tt_menu">Edit Time Table</string>
    <string name="save_tt_menu">Save Changes</string>
    <string name="cancel_tt_menu">Cancel Changes</string>
    <string name="delete_text">Delete</string>
    <string name="support_adbutton">WATCH AN AD</string>
    <string name="support_reviewbutton">LEAVE A REVIEW</string>
    <string name="extra_class_dialog_title">Add Extra Class</string>
    <string name="almost_there_text_1">You\'re Almost There.</string>
    <string name="almost_there_text_2">This is it. We\'re done. \\(^o^)/</string>
    <string name="add_button_text">Add</string>
    <string name="remove_button_text">Remove</string>
    <string name="cancel_text">Cancel</string>
    <string name="back_text">Back</string>
    <string name="okay_text">Okay</string>
    <string name="confirm_text">Confirm</string>
    <string name="nope_text">Nope</string>
    <string name="save_text">Save</string>
    <string name="subject_name_edit_title">Enter Subject Name</string>
    <string name="username_edit_title">"Enter New Username"</string>
    <string name="cancel_all_text">Cancel All</string>
    <string name="undo_text">UNDO</string>
    <string name="notif_title">Miss Any Classes Today?</string>
    <string name="notif_content">Tap to update your attendance</string>
    <string name="total_text">Total:</string>
    <string name="missed_text">Missed:</string>
    <string name="missable_text">Missable:</string>
    <string name="edit_stats_guide_title_1">Forgot To Mark Something?</string>
    <string name="edit_stats_guide_message_1">Not a problem.\n\n (+) &amp; (-) to edit your attendance.\n \"Add\" &amp; \"Remove\" to edit class count. </string>
    <string name="edit_stats_guide_title_2">Don\'t Like The Appearance?</string>
    <string name="edit_stast_guide_message_2">Click here to edit the subject name or color.</string>
    <string name="startup_guide_title_1">Change Your Avatar</string>
    <string name="startup_guide_title_2">Change Your Username</string>
    <string name="startup_guide_title_3">Here\'s Your Subject Card</string>
    <string name="startup_guide_title_4">Miss A Class?</string>
    <string name="startup_guide_title_5">Session Cancelled?</string>
    <string name="startup_guide_title_6">Extra Class?</string>
    <string name="startup_guide_message_1">Have it your way :)</string>
    <string name="startup_guide_message_2">You\'re already spectacular. You\ndon\'t need me to say it.</string>
    <string name="startup_guide_message_3">Click for more info.</string>
    <string name="startup_guide_message_4">Click here to mark your absence\nand see your percentage changes.</string>
    <string name="startup_guide_message_5">Click here to mark it and see how\nyour attendance changes.</string>
    <string name="startup_guide_message_6">Click here to add classes\nto the schedule.</string>
    <string name="subject_text">Subject</string>
    <string name="missed_class_toast">Absence Already Marked</string>
    <string name="cancelled_undo_text">Cancelled</string>
    <string name="invalid_sessions_toast">Invalid Sessions</string>
    <string name="invalid_subjects_toast">Invalid Subjects</string>
    <string name="start_date_toast">Enter Start Date</string>
    <string name="end_date_toast">Enter End Date</string>
    <string name="invalid_percentage_toast">Invalid Percentage</string>
    <string name="invalid_dates_toast">Invalid Dates</string>
    <string name="free_session_text">&lt;free&gt;</string>
    <string name="support_thank_you_toast">Thank You :)</string>
    <string name="edit_button_text">Edit</string>
    <string name="ignore_button_text">Ignore Changes</string>
    <string name="tt_edits_cancelled_toast">Edits Cancelled</string>
    <string name="tt_edits_saved_toast">Edits Saved</string>
    <string name="default_username">Spectacular User</string>
    <string name="subject_plus_descrip">Add New Subject</string>
    <string name="session_plus_descrip">Add New Session</string>
    <string name="edit_plus_descrip">Increase Attended Classes</string>
    <string name="edit_minus_descrip">Decrease Attended Classes</string>
    <string name="schedule_minus_descrip">Mark As Missed</string>
    <string name="schedule_plus_descrip">Add An Extra Class</string>
    <string name="absence_dialog_title">Undo Absence?</string>
    <string name="absence_dialog_message">This class was marked absent. Would you like to undo that?</string>
    <string name="ignore_text">IGNORE</string>
    <string name="multi_absence_dialog_message_1">The following classes were marked absent:</string>
    <string name="multi_absence_dialog_message_2">Would you like to undo these absences?</string>
    <string name="empty_tt_toast">No Classes Assigned</string>
    <string name="change_color_text">CHANGE COLOR</string>
    <string name="no_assignments_text">There are no pending assignments. Use the \'+\' icon to add a new assignment.</string>
    <string name="assignments_title">Assignments</string>
    <string name="overdue_text">Overdue</string>
    <string name="assignment_heading">Your Assignments</string>
    <string name="mark_as_done_text">MARK AS DONE</string>
    <string name="mark_as_undone_text">MARK AS UNDONE</string>
    <string name="due_days_ago_text">Due 0 days ago</string>
    <string name="due_yesterday_text">Due yesterday</string>
    <string name="due_today_text">Due today</string>
    <string name="due_tomorrow_text">Due tomorrow</string>
    <string name="due_in_days_text">Due in 0 days</string>
    <string name="delete_assignment_warning">Delete this assignment?</string>
    <string name="assignment_default_note">&lt;no description provided&gt;</string>
    <string name="assignment_title_error_message">Please enter a title.</string>
    <string name="assignment_due_date_error_message">Please pick the due date.</string>
    <string name="assignment_subject_error_message">Please pick a subject.</string>
    <string name="title_text">Title</string>
    <string name="due_date_text">Due Date</string>
    <string name="description_text">Description</string>
    <string name="new_assignment_toast">An assignment is already being created.</string>
    <string name="assignments_first_title_1">This assignment is overdue</string>
    <string name="assignments_first_title_2">This one\'s pending submission</string>
    <string name="assignments_first_title_3">Tap here for more info</string>
    <string name="assignments_first_description_3">"Your description goes here.\nI\'ll start. Beautiful :)"</string>
</resources>
