<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@color/startup_bg"
    android:layout_height="match_parent"
    tools:context=".StartupActivity">

    <!--    Above scroll view. So z-index below it-->
    <TextView
        android:id="@+id/delete_slide"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:width="70dp"
        android:text="@string/delete_slider_text"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#ff6459"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/startup_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:progress="0"
        android:progressDrawable="@drawable/progress_drawable"
        app:layout_constraintEnd_toEndOf="@+id/startup_scrollview"
        app:layout_constraintStart_toStartOf="@+id/startup_scrollview"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/startup_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:scrollbars="none"
        android:paddingVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/startup_main_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/startup_hello"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/startup_hello"
                android:textColor="@color/colorPrimaryDark"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/startup_hello2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/startup_welcome"
                android:textColor="@color/colorPrimaryDark"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/startup_hello3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/startup_lets_get"
                android:textColor="@color/colorPrimaryDark"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/startup_session_time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/startup_session_title"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/session_time_guide"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:alpha="0"
                android:gravity="center"
                android:text="@string/startup_guide_text"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:id="@+id/session_plus"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:paddingVertical="5dp"
                android:visibility="gone"
                app:backgroundTint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/plusw" />

            <TextView
                android:id="@+id/startup_subjects"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/startup_subject_title"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/subject_guide"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:alpha="0"
                android:gravity="center"
                android:text="@string/startup_guide_text"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:id="@+id/subject_plus"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:paddingVertical="5dp"
                android:visibility="gone"
                app:backgroundTint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/plusw" />

            <TextView
                android:id="@+id/startup_time_table"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/startup_timetable_title"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/box_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/monday_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/monday_color" />

            <TextView
                android:id="@+id/box_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/tuesday_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/tuesday_color" />

            <TextView
                android:id="@+id/box_3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/wednesday_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/wednesday_color" />

            <TextView
                android:id="@+id/box_4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/thursday_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/thursday_color" />

            <TextView
                android:id="@+id/box_5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/friday_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/friday_color" />

            <TextView
                android:id="@+id/box_6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/saturday_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/saturday_color" />

            <TextView
                android:id="@+id/box_7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/sunday_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/sunday_color" />

            <LinearLayout
                android:id="@+id/attendance_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:alpha="0"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/startup_attendance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/required_attendance"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/editText_attendance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/curve_10dp"
                    android:inputType="number"
                    android:paddingHorizontal="5dp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <TextView
                android:id="@+id/startup_working"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/semester_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/semester_start_date"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:gravity="center"
                android:text="@string/blank_date"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/startup_bg" />

            <TextView
                android:id="@+id/semester_hyphen"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/empty_hyphen"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/semester_end_date"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:alpha="0"
                android:background="@drawable/curve_10dp"
                android:gravity="center"
                android:text="@string/blank_date"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform"
                app:backgroundTint="@color/startup_bg" />


            <TextView
                android:id="@+id/startup_distribution"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/session_distr_title"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/okay_btn_startup"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:alpha="0"
                    android:onClick="okay_button_pressed"
                    app:srcCompat="@drawable/okay" />

                <ImageView
                    android:id="@+id/back_btn_startup"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:alpha="0"
                    android:onClick="back_button_pressed"
                    android:visibility="gone"
                    app:srcCompat="@drawable/back" />
            </RelativeLayout>

            <TextView
                android:id="@+id/startup_loading"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/startup_loading_text"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:autoSizeTextType="uniform" />

            <ProgressBar
                android:id="@+id/loading_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:alpha="0"
                android:indeterminate="true"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
