<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="20dp"
    android:paddingStart="0dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/extra_class_dialog_title"
        android:textColor="?attr/textColor"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/dialog_session_text"
            android:textColor="?attr/textColor"
            app:autoSizeTextType="uniform" />

        <Spinner
            android:id="@+id/session_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="1dp"
            android:layout_weight="4"
            android:popupBackground="?attr/bgColor"
            android:ellipsize="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/dialog_subject_text"
                android:textColor="?attr/textColor"
                app:autoSizeTextType="uniform"  />

            <Spinner
                android:id="@+id/subject_spinner"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:popupBackground="?attr/bgColor"
                android:layout_marginVertical="1dp"
                android:layout_height="match_parent"
                android:ellipsize="end" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/class_override_warning"
        android:textColor="@color/dialog_warning" />
</LinearLayout>
