<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/support_message"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:text="@string/support_message"
        android:textColor="?attr/textColor"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/ad_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ad_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/curve_10dp"
        android:backgroundTint="?attr/textColor"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/support_adbutton"
        android:textColor="?attr/bgColor"
        app:layout_constraintBottom_toBottomOf="@+id/review_button"
        app:layout_constraintEnd_toEndOf="@+id/support_message"
        app:layout_constraintStart_toEndOf="@+id/review_button"
        app:layout_constraintTop_toTopOf="@+id/review_button" />

    <Button
        android:id="@+id/review_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/curve_10dp"
        android:backgroundTint="?attr/textColor"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/support_reviewbutton"
        android:textColor="?attr/bgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ad_button"
        app:layout_constraintStart_toStartOf="@+id/support_message"
        app:layout_constraintTop_toBottomOf="@+id/support_message" />
</androidx.constraintlayout.widget.ConstraintLayout>